--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -145,9 +145,9 @@ Nowadays, with the strong development of embedded systems, the design phase play
 
 In any HW and SW design of complex systems, more time is spent on verification than on construction ~\cite{Baier2008}. Formal methods based on model checking offer great potential to obtain a more effective and faster verification in the design process. Software (and systems) may be viewed as mathematical objects with behavior that is, in principle, well determined. This makes it possible to specify software using mathematical logic, which constitutes the intended (correct) behavior. Then, one can try to give a formal proof or otherwise establish that the software meets its specification ~\cite{Clarke2009}. Research in formal methods has led to the development of very promising verification techniques, which facilitate the early detection of errors. Model-based verification techniques use models that describe the possible system behavior in a mathematically precise and unambiguous manner. The system models are accompanied by algorithms that systematically explore all the states of the system model.
 
-In~\cite{Trindade2015,Trindade2016,Trindade2014} was shown that it is possible to use Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) to perform HW-SW partitioning in embedded systems. The present work extends those studies since there is a substantial improvement in terms of the SMT-based verification method, which has been extended with a multi-core binary-search approach, as well as, the integration of the $\nu$Z tool into ESBMC, which is a state-of-art optimization tool based on SMT~\cite{Bjorner2015}. Multi-core processors have been used in all segments of industry to implement high-performance computing~\cite{Wu2014}. In particular, hardware platforms, together with multi-processing platforms, have allowed verification algorithms to distribute tasks executions across multiple processors, which generate an increase in performance if compared to single-core solution~\cite{Holzmann11}. However, most algorithms for software verification still disregard the limitations of the CMOS technology and focus their solution on a single-core approach~\cite{Cordeiro2012,Clarke2004,Armando2009,Ganai2006}. 
+In~\cite{Trindade2015,Trindade2016,Trindade2014} was shown that it is possible to use Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) to perform HW-SW partitioning in embedded systems. The present work extends those studies since there is a substantial improvement in terms of the SMT-based verification method, which has been extended with a multi-core parallel- and binary-search approaches, as well as, the integration of the MaxSMT solver $\nu$Z into ESBMC, which is a state-of-art optimization tool based on SMT~\cite{Bjorner2015}. Multi-core processors have been used in all segments of industry to implement high-performance computing~\cite{Wu2014}. In particular, hardware platforms, together with multi-processing platforms, have allowed verification algorithms to distribute tasks executions across multiple processors, which generate an increase in performance if compared to single-core solution~\cite{Holzmann11}. However, most algorithms for software verification still disregard the limitations of the CMOS technology and focus their solution on a single-core approach~\cite{Cordeiro2012,Clarke2004,Armando2009,Ganai2006}. 
 
-Here, we exploit the availability of multi-core processors; in particular, SMT-based verification methods are applied to the HW-SW partition problem in three different ways using multi-core ESBMC with OpenMP:  ESBMC-MC using a sequential-search, ESBMC-PS using a parallel-search, and ESBMC-PB using a binary-search. Experimental results are compared to ILP (integral linear programming), GA (generic algorithms) in a multi-core version, and also the $\nu$Z tool, which supports only a single-core approach~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the Optimization Toolbox of Matlab~\cite{OpenMP1998}, while $\nu$Z is a built-in tool to the SMT solver Z3 in which its main function is to check the satisfiability of logical formulas based on objective functions. All multi-core ESBMC with OpenMP approaches, together with $\nu$Z, are implemented with the Efficient SMT-based Bounded Model Checker (ESBMC) tool~\cite{Cordeiro2012}. 
+Here, we exploit the availability of multi-core processors; in particular, SMT-based verification methods are applied to the HW-SW partition problem in three different ways using a multi-core ESBMC approach with OpenMP: ESBMC-SS using a sequential-search (SS), ESBMC-PS using a parallel-search (PS), and ESBMC-PB using a binary-search (BS). Experimental results are compared to ILP (integral linear programming), GA (generic algorithms) in a multi-core version, and also to $\nu$Z, which supports only a single-core approach~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the optimization toolbox of Matlab~\cite{OpenMP1998}, while $\nu$Z is a built-in tool to the SMT solver Z3 in which its main function is to check the satisfiability of logical formulas based on objective functions. All multi-core ESBMC approaches with OpenMP, together with $\nu$Z, are implemented with the Efficient SMT-based Context-Bounded Model Checker (ESBMC) tool~\cite{Cordeiro2012}. 
 
 \textbf{Contributions.} The main contribution of the present study is to show that it is possible to take advantage of an SMT-based BMC tool in a multi-core architecture to solve optimization problems. Experimental results show that multi-core model-checking techniques can be effective, in particular cases, to find the optimal solution of the HW-SW partitioning problem using an SMT-based BMC approach. Additionally, we integrate the MaxSMT solver $\nu$Z into an off-the-shelf BMC tool that is typically used for software verification. To the best of our knowledge, this is the first work to use a multi-core SMT-based verification and a MaxSMT solver to check for HW-SW partitioning problems in embedded systems.
 
@@ -404,7 +404,7 @@ In the ESBMC algorithm, which is shown below, it is not necessary to add slack v
 %Therefore, the algorithm starts different ESBMC instances using different optimization values, in ascending order, for $ Hmax $ in order to %find a violation. If all instances finish and no violation is found, then multi-core ESBMC starts new $ N $ instances. When a violation is %found, it reports time and hardware cost. If multi-core ESBMC tests all the possibilities for the hardware cost and has not found a violation, %then it reports: $ Violation not found $.
 
 %----------------------------------------------
-\subsection{Multi-core ESBMC with OpenMP (ESBMC-MC)}
+\subsection{Multi-core ESBMC with OpenMP (ESBMC-SS)}
 \label{Multi-core-ESBMC-with-OpenMP}
 %----------------------------------------------
 
@@ -561,7 +561,7 @@ ESBMC implement four approaches: ESBMC, ESBMC Multicore (MC), ESBMC Parallel Seq
 
 \begin{itemize}
 \item{\textbf{ESBMC:} This strategy uses only one core to solve the partitioning problem, as described in Section~\ref{Verification-Algorithm-using-ESBMC}.
-\item{\textbf{ESBMC-MC:} This uses a sequential strategy \{1 ,2 ,\:...\:, Hmax\}; there is no parallel controller in this approach, as described in Section~\ref{Multi-core-ESBMC-with-OpenMP}.}
+\item{\textbf{ESBMC-SS:} This uses a sequential strategy \{1 ,2 ,\:...\:, Hmax\}; there is no parallel controller in this approach, as described in Section~\ref{Multi-core-ESBMC-with-OpenMP}.}
 \item{\textbf{ESBMC-PS:} This approach is similar to ESBMC MC; however, it uses a more optimized way to launch the ESBMC instances, as described Section~\ref{Multi-core-ESBMC-with-OpenMP-using-workers}.}
 \item{\textbf{ESBMC-PB:} This strategy uses a parallel binary search, as described in Section~\ref{Multi-core-ESBMC-with-OpenMP-using-Binary-Search}.}}
 \end{itemize}
@@ -629,7 +629,7 @@ Clustering described in Table~\ref{Experimental-results-of-the-complex-benchmark
 \hline
 
 %MultiCore ESBMC
-\multirow{2}{*}{\textbf{ESBMC-MC}}
+\multirow{2}{*}{\textbf{ESBMC-SS}}
 &  T(s)   &  2   &  6   &  7   &  1615   &  TO    &  TO   &  TO  \\
 &  Hp   &  15   &  47   &  31   &  241   &  -    &  -   &  -  \\
 \hline
